--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -10,7 +10,8 @@
    
     <form method="post" action="add">
          {% csrf_token %}
-        <div>
+         {{ form.as_p }}
+        <!-- <div>
             <p>
                 <label for="id_name">Item Name:</label>
                 <input type="text" id="id_name" name="item_name"/>
@@ -21,12 +22,12 @@
                 <label for="id_done">Done :</label>
                 <input type="checkbox" id="id_done" name="done"/>
             </p>
-        </div>
+        </div>-->
         <div>
             <p>
                 <button type="submit">Add item</button>
             </p>
-        </div>
+        </div> 
     </form>
 </body>
 </html>
